<resources>
    <string name="app_name">Playlist maker</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="app_share">Поделиться приложением</string>
    <string name="help">Написать в поддержку</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="user_agreements">Пользовательское соглашение</string>
    <string name="email">mizyakov.ivan@yandex.ru</string>
    <string name="theme_letter">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_letter">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="android_developer">https://practicum.yandex.ru/android-developer</string>
    <string name="user_agreements_link">https://yandex.ru/legal/practicum_offer</string>
    <string name="mail_to">mailto:</string>
    <string name="text_plain">text/plain</string>
    <string name="error_no_app_to_share_message">У вас нет подходящего приложения</string>
    <string name="error_no_app_to_send_email">У вас нет приложения почтового клиента</string>
    <string name="error_no_app_browser">У вас нет браузера для открытия ссылки</string>
    <string name="notFind">Ничего не нашлось</string>
    <string name="no_internet">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="connection_lost">Проблемы со связью</string>
    <string name="refresh">Обновить</string>
    <string name="history_clear_button">Очистить историю</string>
    <string name="searched">Вы искали</string>
    <string name="track_length">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="title_history">Вы искали</string>
    <string name="duration_start">00:00</string>
    <string name="nothing_media">Ваша медиатека пуста</string>
    <string name="nothing_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_track">Избранные треки</string>
    <string name="playlist">Плейлист</string>
    <string name="button_create">Создать</string>
    <string name="name_playlist">Название*</string>
    <string name="description_playlist">Описание</string>
    <string name="dialog_exiting_playlist_creation">Завершить создание плейлиста?</string>
    <string name="dialog_loss_of_data">Все несохраненные данные будут потеряны</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_complete">Завершить</string>
    <string name="created">создан</string>
    <string name="rationale_permission">Разрешение на доступ к файлам необходим для выбора обложки альбома.</string>
    <string name="denied_permanently_permission">Разрешение на доступ к файлам запрещено.
        Для включения разрешения необходимо перейти в настройки.</string>
    <string name="_0_tracks">0 треков</string>
    <string name="_5_20_tracks">треков</string>
    <string name="_1_track">трек</string>
    <string name="_2_4_track">трека</string>
    <string name="add_playlist">Добавить в плейлист</string>
    <string name="trackOnPlaylist">Трек уже добавлен в плейлист</string>
    <string name="trackAddOnPlaylist">Добавлено в плейлист</string>
    <string name="artwork">Обложка альбома</string>
    <string name="_0_minutes">0 минут</string>
    <string name="_5_20_minutes">минут</string>
    <string name="_1_minutes">минута</string>
    <string name="_2_4_minutes">минуты</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="empty_playlist">Плейлист пуст</string>
    <string name="no_track_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="name_playlist_newplaylist">Название*</string>
    <string name="description_playlist_newplaylist">Описание</string>
    <string name="delete_playlist_message">Хотите удалить плейлист?</string>
</resources>