<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bright_blue"
    android:orientation="vertical"
    android:padding="14dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="16dp"

            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:fontFamily="@font/ys_display_font"
            android:textColor="@color/white"
            android:textSize="22sp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="28dp"
        android:orientation="vertical">

        <Button

            android:id="@+id/search_button"
            style="@style/style_main_button"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/library_button"
            style="@style/style_main_button"
            android:text="@string/library"
            app:icon="@drawable/library" />

        <Button
            android:id="@+id/settings_button"
            style="@style/style_main_button"
            android:text="@string/settings"
            app:icon="@drawable/setting" />

    </LinearLayout>

    </LinearLayout>
