<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context="com.practicum.playlistmaker.search.ui.fragment.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSetting"
        style="@style/panelHeaderToolbar"
        app:title="@string/search" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_edit_text"
        android:layout_marginEnd="@dimen/margin_edit_text"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="?attr/edit_text"
            android:orientation="horizontal"
            app:cardCornerRadius="8dp"
            tools:context=".SearchActivity">

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="@dimen/button_height"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/padding_text"
                android:layout_weight="1"
                android:src="@drawable/search" />

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="@dimen/button_height"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="20"
                android:background="@null"
                android:fontFamily="@font/ys_display_regular"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="?attr/text_search"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                android:textSize="@dimen/t_size_16" />

            <ImageView
                android:id="@+id/searchClearIcon"
                android:layout_width="@dimen/button_height"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/padding_text"
                android:layout_weight="1"
                android:src="@drawable/cross"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/sizeProgressBar"
            android:layout_height="@dimen/sizeProgressBar"
            android:layout_gravity="center"
            android:indeterminateTint="@color/bright_blue"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                style="@style/notFindPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                style="@style/notFindPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/_16dp"
                android:text="@string/notFind"
                android:textSize="@dimen/size_19sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                style="@style/noInternetPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                style="@style/noInternetPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/_16dp"
                android:text="@string/connection_lost"
                android:textSize="@dimen/size_19sp" />

            <TextView
                style="@style/noInternetPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/_16dp"
                android:text="@string/no_internet"
                android:textSize="@dimen/size_19sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/refresh_button"
                style="@style/action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/refresh"
                android:textAllCaps="false"
                android:textSize="@dimen/size_14sp"
                app:cornerRadius="@dimen/radius_54dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/title_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:text="@string/title_history"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="19sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <Button
                android:id="@+id/clear_history"
                style="@style/action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="24dp"
                android:paddingHorizontal="@dimen/_16dp"
                android:paddingVertical="@dimen/_10dp"
                android:text="@string/history_clear_button"
                android:textAllCaps="false"
                android:textSize="@dimen/size_14sp"
                app:cornerRadius="@dimen/radius_54dp" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>




