<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.PlaylistMaker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.practicum.playlistmaker.player.ui.fragment.PlayerFragment"
    android:background="?attr/colorSecondary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarSetting"
            style="@style/panelHeaderToolbar"
            android:background="?attr/colorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/artwork_url_100"
            app:navigationIcon="@drawable/arrow_back"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>

        <ImageView
            android:id="@+id/artwork_url_100"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbarSetting"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintBottom_toTopOf="@id/trackName"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginBottom="@dimen/_24dp"
            android:contentDescription="@string/artwork"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/placeholder"/>

        <TextView
            android:id="@+id/trackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/artwork_url_100"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintBottom_toTopOf="@id/artistName"
            android:textSize="@dimen/t_size_22"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintVertical_chainStyle="spread"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:fontFamily="@font/ys_display_medium"
            tools:text="Song title"
            android:textColor="?attr/colorOnSecondary"/>

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/trackName"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintBottom_toTopOf="@id/button_add_track"
            android:textSize="@dimen/t_size_16"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginTop="@dimen/padding_12"
            android:layout_marginBottom="@dimen/_54dp"
            android:fontFamily="@font/ys_display_medium"
            tools:text="Artist name"
            android:textColor="?attr/colorOnSecondary"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_add_track"
            android:layout_width="@dimen/_52dp"
            android:layout_height="@dimen/_52dp"
            app:fabCustomSize="@dimen/_52dp"
            app:layout_constraintTop_toBottomOf="@id/artistName"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/play_track"
            app:layout_constraintBottom_toBottomOf="@id/play_track"
            app:layout_constraintEnd_toStartOf="@id/play_track"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:layout_marginStart="@dimen/_8dp"
            android:foregroundGravity="center"
            android:src="@drawable/add_to_collection_button_night"
            app:tint="@color/white"
            android:backgroundTint="?attr/button_media"
            app:elevation="0dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_track"
            style="@style/buttonPlayPause"
            app:layout_constraintStart_toEndOf="@id/button_add_track"
            app:layout_constraintBottom_toTopOf="@id/duration"
            app:layout_constraintEnd_toStartOf="@id/like_track"
            app:layout_constraintTop_toBottomOf="@id/artistName"
            android:src="@drawable/play_button"/>

        <ImageView
            android:id="@+id/like_track"
            android:layout_width="@dimen/_52dp"
            android:layout_height="@dimen/_52dp"
            app:fabCustomSize="@dimen/_52dp"
            app:layout_constraintStart_toEndOf="@id/play_track"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintBottom_toBottomOf="@id/play_track"
            app:layout_constraintTop_toTopOf="@id/play_track"
            android:backgroundTint="?attr/button_media"
            android:layout_marginEnd="8dp"
            app:elevation="0dp"
            android:foregroundGravity="center"
            android:src="@drawable/ic_button_like_off"/>

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/play_track"
            app:layout_constraintBottom_toTopOf="@id/track_time"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="13sp"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginBottom="40dp"
            tools:text="0:00"/>

        <TextView
            style="@style/dataNameTrack"
            android:id="@+id/track_time"
            app:layout_constraintTop_toBottomOf="@id/duration"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintBottom_toTopOf="@id/collection_name"
            android:text="@string/track_length"/>

        <TextView
            style="@style/dataTrack"
            android:id="@+id/track_time_data"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="@id/track_time"
            app:layout_constraintBottom_toBottomOf="@id/track_time"
            tools:text="5:03"/>

        <TextView
            style="@style/dataNameTrack"
            android:id="@+id/collection_name"
            app:layout_constraintTag="collection_name"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_time"
            app:layout_constraintBottom_toTopOf="@id/release_date"
            app:layout_constraintEnd_toStartOf="@id/barrier"
            android:layout_marginEnd="64dp"
            android:text="@string/track_album"/>

        <TextView
            style="@style/dataTrack"
            android:id="@+id/collection_name_data"
            app:layout_constraintTag="collection_name_data"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="@id/collection_name"
            app:layout_constraintBottom_toBottomOf="@id/collection_name"
            app:layout_constraintHorizontal_chainStyle="spread"
            tools:text="Название альбома"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="collection_name"/>

        <TextView
            style="@style/dataNameTrack"
            android:id="@+id/release_date"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/collection_name"
            app:layout_constraintBottom_toTopOf="@id/primary_genre_name"
            android:text="@string/track_year" />

        <TextView
            style="@style/dataTrack"
            android:id="@+id/release_date_data"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="@id/release_date"
            app:layout_constraintBottom_toBottomOf="@id/release_date"
            tools:text="1994"/>

        <TextView
            style="@style/dataNameTrack"
            android:id="@+id/primary_genre_name"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/release_date"
            app:layout_constraintBottom_toTopOf="@id/country"
            android:text="@string/track_genre" />

        <TextView
            style="@style/dataTrack"
            android:id="@+id/primary_genre_name_data"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="@id/primary_genre_name"
            app:layout_constraintBottom_toBottomOf="@id/primary_genre_name"
            tools:text="Название жанра"/>

        <TextView
            style="@style/dataNameTrack"
            android:id="@+id/country"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/primary_genre_name"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:text="@string/track_country"/>

        <TextView
            style="@style/dataTrack"
            android:id="@+id/country_data"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="@id/country"
            app:layout_constraintBottom_toBottomOf="@id/country"
            tools:text="Название страны"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/corner_rectangle_bottomsheet"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_text"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounder" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/t_size_20"
            android:layout_margin="@dimen/margin_16"
            app:layout_constraintVertical_chainStyle="spread"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/add_playlist"
            android:gravity="center"/>

        <Button
            android:id="@+id/button_new_playlist"
            style="@style/searchButtonRefresh"
            android:text="@string/new_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="24dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerPlaylist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>